feat: add markup for header

--- a/index.html
+++ b/index.html
@@ -7,5 +7,32 @@
     <link rel="stylesheet" href="style.css" />
     <title>Singolo</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="row align-end">
+          <h1 class="logo">SINGOLO<span>*</span></h1>
+          <nav class="navigation">
+            <li class="navigation__list">
+              <ul class="navigation__items">
+                <a href="#" class="navigation__link">Home</a>
+              </ul>
+              <ul class="navigation__items">
+                <a href="#" class="navigation__link">Services</a>
+              </ul>
+              <ul class="navigation__items">
+                <a href="#" class="navigation__link">Portfolio</a>
+              </ul>
+              <ul class="navigation__items">
+                <a href="#" class="navigation__link">About</a>
+              </ul>
+              <ul class="navigation__items">
+                <a href="#" class="navigation__link">Contact</a>
+              </ul>
+            </li>
+          </nav>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
