feat: add markup for main part

--- a/index.html
+++ b/index.html
@@ -34,5 +34,98 @@
         </div>
       </div>
     </header>
+    <main class="main">
+      <div class="slider">
+        <div class="container">
+          <div class="slider__wrapper">
+            <img class="slider__image" src="assets/img/slider-1.png" alt="Iphone" />
+          </div>
+        </div>
+      </div>
+      <section class="services">
+        <div class="container">
+          <h2 class="title">Our Services</h2>
+          <p class="services__text">
+            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non
+            commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce
+            dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+          </p>
+          <ul class="services__list">
+            <li class="services__item">
+              <div class="services__icon-box">
+                <img class="services__icon" src="assets/img/pen.svg" alt="Pen" />
+              </div>
+              <div class="services__info">
+                <h4 class="services__title">Custom Design</h4>
+                <p class="services__desc">
+                  Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra
+                  lacus ut, ultrices velit.
+                </p>
+              </div>
+            </li>
+            <li class="services__item">
+              <div class="services__icon-box">
+                <img class="services__icon" src="assets/img/bulb.svg" alt="Lamp" />
+              </div>
+              <div class="services__info">
+                <h4 class="services__title">Inovative Ideas</h4>
+                <p class="services__desc">
+                  Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum
+                  tellus dolor id lorem.
+                </p>
+              </div>
+            </li>
+            <li class="services__item">
+              <div class="services__icon-box">
+                <img class="services__icon" src="assets/img/heart.svg" alt="Heart" />
+              </div>
+              <div class="services__info">
+                <h4 class="services__title">Love Is The Answer</h4>
+                <p class="services__desc">
+                  Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat
+                  felis. Quisque condimentum.
+                </p>
+              </div>
+            </li>
+            <li class="services__item">
+              <div class="services__icon-box">
+                <img class="services__icon" src="assets/img/phone.svg" alt="Phone" />
+              </div>
+              <div class="services__info">
+                <h4 class="services__title">Responsive Layout</h4>
+                <p class="services__desc">
+                  Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula.
+                  Praesent elit leo.
+                </p>
+              </div>
+            </li>
+            <li class="services__item">
+              <div class="services__icon-box">
+                <img class="services__icon" src="assets/img/bubble.svg" alt="Comment" />
+              </div>
+              <div class="services__info">
+                <h4 class="services__title">24 / 7 Support</h4>
+                <p class="services__desc">
+                  Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat.
+                  Pellentesque egestas venenatis lorem .
+                </p>
+              </div>
+            </li>
+            <li class="services__item">
+              <div class="services__icon-box">
+                <img class="services__icon" src="assets/img/star.svg" alt="Star" />
+              </div>
+              <div class="services__info">
+                <h4 class="services__title">Feel Like A Star</h4>
+                <p class="services__desc">
+                  Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae
+                  aliquam tellus.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
